# auox

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
http/: client.http  test.http
src/: accounts.rs  api.rs  auth.rs  config.rs  fileio.rs  main.rs  ui.rs
src/models/: accounts.rs  mod.rs  token.rs  transfers.rs
