[package]
name = "auox"
version = "0.0.1"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
crossterm = "0.29.0"
dirs = "6.0.0"
env_logger = "0.11.5"
log = "0.4.22"
open = "5.3.2"
ratatui = "0.29.0"
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tachyonfx = "0.20.1"
tiny_http = "0.12.0"
toml = "0.9.8"
url = "2.5.7"
urlencoding = "2.1.3"
